gcc/testsuite/g++.dg/parse/elab2.C
struct A {};

struct B
{
  typedef A T; // { dg-message "previous declaration" }
  friend struct T; // { dg-error "" }
};
